@@ -1063,7 +1063,8 @@ Unable to locate vertex program called Ogre/BasicVertexPrograms/AmbientOneTextur
       modified files
       Always configure with --enable-debug to get a log
       - [X] It works in debug mode :( Should know why
-**** TODO Sourceforge release                                              [83%]
+**** TODO Sourceforge release                                              [85%]
+     CLOCK: [2011-12-02 ven. 16:51]--[2011-12-02 ven. 17:18] =>  0:27
      CLOCK: [2011-07-18 lun. 16:11]--[2011-07-18 lun. 16:33] =>  0:22
      CLOCK: [2011-07-02 sam. 21:37]--[2011-07-02 sam. 21:52] =>  0:15
 - [X] Remove CEGUI reference from Sourceforge project overview
@@ -1077,4 +1078,5 @@ Unable to locate vertex program called Ogre/BasicVertexPrograms/AmbientOneTextur
 - [X] File release sourceforge (gz+bz2)
       - [X] Add -src suffix to the archive name
       - [X] Should add rev number to the release names
+- [X] Modify and submit the lsm file
 - [ ] Add a screenshot
