@@ -4,7 +4,7 @@ RainbruRPG.texi.
 `RainbruRPG' is an in-development 3D Multiplayer Online Role-Playing
 Game
 
-   Copyright (C) 2006-2008 Je'ro^me PASQUIER
+   Copyright (C) 2006-2011 Je'ro^me PASQUIER
 
    Permission is granted to make and distribute verbatim copies of this
 manual provided the copyright notice and this permission notice are
