@@ -1,20 +1,18 @@
-Begin3
+Begin4
 Title:		RainbruRPG
 Version:	@VERSION@
-Release:        @RELEASE@
 Entered-date:	@ISODATE@
-Description:	An in-development Multiplayer Online Role-Playing Game
-		It is fairly unplayable as it is in early development
-		session.
-
-Keywords:	[substitute your keywords here]
-Author: 	rainbru@free.fr (Jérôme PASQUIER)
-Maintained-by:	rainbru@free.fr (Jérôme PASQUIER)
-Primary-site:	metlab.unc.edu pub/Linux/apps/some/directory
-		31k RainbruRPG-@VERSION@.tar.gz
-		500  RainbruRPG.lsm
+Description:	RainbruRPG is a C++/ruby project based on Ogre3D and CEGUI. 
+                It intends to create a free open source 3D multiplayer Role 
+		Playing Game project. It is based on an Object Oriented 
+		design through C++ and ruby modules and a community oriented 
+		conept through a wiki
+Keywords:	game 3d rpg mmorpg x11
+Author: 	rainbru@free.fr (Jérôme Pasquier)
+Maintained-by:	rainbru@free.fr (Jérôme Pasquier)
+Primary-site:	http://rainbrurpg.sourceforge.net
 Alternate-site: 
 Original-site:  
-Platforms:      
-Copying-policy:	GNU copyleft
+Platforms:      linux/unix x11
+Copying-policy:	GPL
 End
