@@ -1,4 +1,4 @@
-@set UPDATED 14 October 2011
-@set UPDATED-MONTH October 2011
+@set UPDATED 2 December 2011
+@set UPDATED-MONTH December 2011
 @set EDITION 0.0.5
 @set VERSION 0.0.5
