@@ -1,5 +1,9 @@
 2011-11-29 Jerome Pasquier  <rainbru@free.fr>
 
+	* RainbruRPG.lsm.in: modified: ready to be submitted.
+
+2011-11-29 Jerome Pasquier  <rainbru@free.fr>
+
 	* configure.in: checks again gnet-2.0.
 
 2011-07-18 Jerome Pasquier  <rainbru@free.fr>
